Update README.md for how to use two methods for CROS / Update detail view data and id for small devices / Update Thumbnail item from fixed to absolute for a better result on smartphones / Change comic-box styles for a more favorable view on Safari browser

--- a/src/index.css
+++ b/src/index.css
@@ -69,21 +69,21 @@ body {
 .comic-box1 {
     border-color: #000;
     border-width: 3px 4px 3px 5px;
-    border-radius: 95% 4% 92% 5%/4% 95% 6% 95%;
+    border-radius: 95% 4% 100% 5%/4% 95% 6% 95%;
     transform: rotate(0.5deg);
 }
 
 .comic-box2 {
     border-color: #000;
     border-width: 3px 3px 5px 5px;
-    border-radius: 4% 95% 6% 95%/95% 4% 92% 5%;
+    border-radius: 5% 95% 6% 105%/95% 4% 92% 5%;
     transform: rotate(-0.5deg);
 }
 
 .comic-box3 {
     border-color: #000;
     border-width: 5px 3px 3px 5px;
-    border-radius: 95% 4% 97% 5%/4% 94% 3% 95%;
+    border-radius: 145% 11% 96% 5%/4% 94% 3% 95%;
     transform: rotate(0.5deg);
 }
 
